feat: add market-level what-if and fingerprinted exports